added example item controller and service
